@@ -87,10 +87,31 @@ class BannersTableBanner extends JTable
 	 */
 	public function bind($array, $ignore = array())
 	{
-		if (isset($array['params']) && is_array($array['params'])) {
-			$registry = new JRegistry();
-			$registry->loadArray($array['params']);
-			$array['params'] = (string) $registry;
+		if (!isset($array['params']))
+		{
+			$parameter = new JParameter;
+			$params=array();
+			// custom group
+			if (isset($array['custom']) && is_array($array['custom']))
+			{
+				$params['custom']=$array['custom'];
+			}
+			if (isset($array['alt']) && is_array($array['alt']))
+			{
+				$params['alt']=$array['alt'];
+			}
+			if (isset($array['flash']) && is_array($array['flash']))
+			{
+				$params['flash']=$array['flash'];
+			}
+			if (isset($array['image']) && is_array($array['image']))
+			{
+				$params['image']=$array['image'];
+			}
+
+			// encode params to JSON
+			$parameter->loadArray($params);
+			$array['params'] = (string)$parameter;
 		}
 
 		return parent::bind($array, $ignore);
