@@ -130,9 +130,9 @@ INSERT INTO `#__assets` (`id`, `parent_id`, `lft`, `rgt`, `level`, `name`, `titl
 --
 
 INSERT IGNORE INTO `#__banners` VALUES
-(1, 1, 0, 'OSM 1', 'osm-1', 0, 43, 0, 'http://www.opensourcematters.org', 0, 27, '', '', 0, 1, '', '{"custom":{"bannercode":""},"alt":{"alt":"Open Source Matters"},"flash":{"width":"0","height":"0"},"image":{"url":"osmbanner1.png"}}', 0, '', -1, -1, -1, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2009-10-10 13:52:59', 'en-GB'),
-(2, 1, 0, 'Shop 1', 'shop-1', 0, 15, 0, '', 1, 30, '', '', 0, 1, '', '{"custom":{"bannercode":""},"alt":{"alt":""},"flash":{"width":"0","height":"0"},"image":{"url":"shop-ad-books.jpg"}}', 0, '', -1, 0, 0, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2010-01-12 00:25:24', 'en-GB'),
-(3, 1, 0, 'Shop 2', 'shop-2', 0, 0, 0, '', 0, 30, '', '', 0, 2, '', '{"custom":{"bannercode":""},"alt":{"alt":"Joomla! Books"},"flash":{"width":"0","height":"0"},"image":{"url":"\\/banners\\/shop-ad.jpg"}}', 0, '', -1, 0, 0, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2010-01-12 00:35:30', 'en-GB'),
+(1, 1, 0, 'OSM 1', 'osm-1', 0, 43, 0, 'http://www.opensourcematters.org', 0, 27, '', '', 0, 1, '', '{"custom":{"bannercode":""},"alt":{"alt":"Open Source Matters"},"flash":{"width":"0","height":"0"},"image":{"url":"images\/banners\/osmbanner1.png"}}', 0, '', -1, -1, -1, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2009-10-10 13:52:59', 'en-GB'),
+(2, 1, 0, 'Shop 1', 'shop-1', 0, 15, 0, '', 1, 30, '', '', 0, 1, '', '{"custom":{"bannercode":""},"alt":{"alt":""},"flash":{"width":"0","height":"0"},"image":{"url":"images\/banners\/shop-ad-books.jpg"}}', 0, '', -1, 0, 0, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2010-01-12 00:25:24', 'en-GB'),
+(3, 1, 0, 'Shop 2', 'shop-2', 0, 0, 0, '', 0, 30, '', '', 0, 2, '', '{"custom":{"bannercode":""},"alt":{"alt":"Joomla! Books"},"flash":{"width":"0","height":"0"},"image":{"url":"images\/banners\/shop-ad.jpg"}}', 0, '', -1, 0, 0, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2010-01-12 00:35:30', 'en-GB'),
 (4, 1, 0, 'Shop 2', 'shop-2', 0, 5, 1, 'http://shop.joomla.org', 1, 30, '', '', 0, 3, '', '{"custom":{"bannercode":""},"alt":{"alt":""},"flash":{"width":"0","height":"0"}}', 0, '', -1, 0, 0, 0, '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '0000-00-00 00:00:00', '2010-01-12 00:55:54', 'en-GB');
 
 
