@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE install PUBLIC "-//Joomla! 1.6//DTD template 1.0//EN" "http://www.joomla.org/xml/dtd/1.6/template-install.dtd">
-<install version="1.6" type="template">
+<install version="1.6" type="template" client="site">
 	<name>beez_20</name>
 	<creationDate>25 November 2009</creationDate>
 	<author>Angie Radtke</author>
