@@ -32,8 +32,11 @@ $ Customizing Save success all over the UI
 
 29-Apr-2010 Hannes Papenberg
 # Fixed parameters in install SQL and sampledata from INI to JSON
+# Fixed errors in JFilterInput
 
 29-Apr-2010 Christophe Demko
+# Fixed [#20232] Discovery method of installing templates doesn't insert a style
+# Saving and loading image banner (thanks Jonathan cheung)
 + Add metadesc and metakey fields to the #__language table (http://groups.google.com/group/joomla-dev-cms/browse_thread/thread/828869eb50004b97)
 # Fixed warning deprecated function ereg in php 5.3 libraries/joomla/client/ftp.php
 # Fixed warning date(): It is not safe to rely on the system's timezone settings (php 5.3). libraries/joomla/utilities/date.php
